Add frontend tests

--- a/server/views/buy-ads.ejs
+++ b/server/views/buy-ads.ejs
@@ -5,6 +5,7 @@
     <title>Home page</title>
   </head>
   <body>
+    <div id="modal"></div>
     <form
       method="POST"
       action="/api/ads"
@@ -20,5 +21,6 @@
       Buy
     </button>
     </form>
+    <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
