Update test webpack configuration

--- a/server/views/buy-ads.ejs
+++ b/server/views/buy-ads.ejs
@@ -21,6 +21,6 @@
       Buy
     </button>
     </form>
-    <script type="text/javascript" src="/bundle.js"></script>
+    <script type="text/javascript" src="/buy-ads.js"></script>
   </body>
 </html>
