--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,3 +1,16 @@
+.overlay {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .modal {
-  color: red;
+  background-color: white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hidden {
+  opacity: 0;
 }
